[package]
name = "graphapp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.31.1", features = ["persistence"] }
egui_plot = "0.32.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
egui_extras = { version = "0.31.1", features = ["syntect"] }
getrandom = { version = "0.2", features = ["js"] }
boa_engine = "0.20.0"
egui_commonmark = { version = "0.20", features = ["better_syntax_highlighting"] }
hframe = "0.4.1"
form_urlencoded = "1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "console",
    "Location",
    "Url",
    "History"
]}
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"
urlencoding = "2.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
colored = "3"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
